tests/testfiles/Syntax_Error/INT.c
int main ()
{
    INT a = 10;
}